# vilfo-api-client-python

./: .gitignore  LICENSE  Pipfile  README.md  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: pythonpackage.yml
test/: test_vilfo.py
vilfo/: __init__.py  client.py  exceptions.py
