[metadata]
name = vilfo-api-client
description = Simple wrapper client for the Vilfo router API
author = Emanuel Winblad
author_email = winblad@protonmail.com
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
url = https://github.com/mannew/vilfo-api-client-python
keywords = 
    vilfo
    router

[options]
packages = find:
install_requires =
    'requests',
    'get-mac>=0.8,<2'
setup_requires =
    setuptools_scm

[options.extras_require]
dev =
    responses
test =
    responses